--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  background: #f8fafc;
+  background: #98cd48;
   color: #333;
 }
 
