--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -12,7 +12,7 @@ const { dark = false } = Astro.props as Props;
 
 <style>
   .card {
-    background: #fff;
+    background: #4c566a;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
