--- a/src/components/Tabs.astro
+++ b/src/components/Tabs.astro
@@ -5,7 +5,7 @@ export interface Props {
   contents: string[];
 }
 
-const { headings, contents, activeTextColor = '#A741FF' } = Astro.props as Props;
+const { headings, contents, activeTextColor = '#b48ead' } = Astro.props as Props;
 ---
 
 <div class="tabs">
@@ -28,8 +28,8 @@ const { headings, contents, activeTextColor = '#A741FF' } = Astro.props as Props
 
   .tabs-header {
     display: flex;
-    background: #333;
-    color: #fff;
+    background: #3b4252;
+    color: #eceff4;
     padding: 10px 20px;
   }
 
@@ -43,7 +43,7 @@ const { headings, contents, activeTextColor = '#A741FF' } = Astro.props as Props
     padding: 20px;
     border: 1px solid #333;
     font-weight: bold;
-    background: #f4f4f4;
+    background: #4c566a;
   }
 </style>
 
