--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,12 +16,12 @@ body {
   font-size: 16px;
   line-height: 1.5;
   background: #2e3440;
-  color: #333;
+  color: #eceff4;
 }
 
 a {
   text-decoration: none;
-  color: #333333;
+  color: #eceff4;
 }
 
 p {
@@ -53,7 +53,7 @@ h3 {
   padding: 0.5rem 1rem;
   border-radius: 5px;
   background: #333;
-  color: #fff;
+  color: #eceff4;
   text-transform: uppercase;
   font-size: 0.8rem;
   letter-spacing: 1px;
