--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -12,7 +12,7 @@ const { dark = false } = Astro.props as Props;
 
 <style>
   .card {
-    background: #4c566a;
+    background: #3b4252;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -21,6 +21,6 @@ const { dark = false } = Astro.props as Props;
 
   .dark {
     background: var(--color-primary);
-    color: #fff;
+    color: #4c566a;
   }
 </style>
