modified:   src/components/Card.astro

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,6 +21,6 @@ const { dark = false } = Astro.props as Props;
 
   .dark {
     background: var(--color-primary);
-    color: #4c566a;
+    color: #3b4252;
   }
 </style>
