modified:   src/components/Card.astro

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -15,7 +15,7 @@ const { dark = false } = Astro.props as Props;
     background: #3b4252;
     padding: 20px;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #333;
     margin-bottom: 20px;
   }
 
