--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -20,7 +20,7 @@ const { dark = false } = Astro.props as Props;
   }
 
   .dark {
-    background: var(--color-primary);
+    background: #3b4252;
     color: #3b4252;
   }
 </style>
