modified:   src/components/Card.astro

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,6 +21,6 @@ const { dark = false } = Astro.props as Props;
 
   .dark {
     background: #3b4252;
-    color: #3b4252;
+    color: #eceff4;
   }
 </style>
