modified:   src/pages/about.astro

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro'
 
-import logos from '../images/deploy-logos.png';
+import banner10 from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
 ---
 
@@ -39,7 +39,7 @@ import logosSmall from '../images/deploy-logos-small.png';
       </Card>
       
       <h3>Deploy to anywhere, even the edge</h3>
-      <img class="logos" src={logos} alt="" />
+      <img class="banner10" src={banner10} alt="" />
       <img class="logos-small" src={logosSmall} alt="" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
