--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import logo from '../images/logo.png'
     </div>
     <nav>
       <ul>
-        <li><a href="/">Home</a></li>
+        <li><a href="/">About</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blog">Blog</a></li>
       </ul>
