--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,7 +12,7 @@ import logo from '../images/logo.png'
     <nav>
       <ul>
         <li><a href="/">About</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/project">Projects</a></li>
         <li><a href="/blog">Blog</a></li>
       </ul>
     </nav>
