--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -8,7 +8,7 @@ export interface Props {
   showExtra?: boolean;
 }
 
-const { heading = "Welcome To The Astro Crash Course!", text="Build super fast HTML-first websites using your favorite JavaScript frameworks", showExtra = false } = Astro.props as Props;
+const { heading = "Justin Christensen", text="About Me/Projects/Blog", showExtra = false } = Astro.props as Props;
 ---
 
 <section class="showcase">
