new file:   src/components/Banner.astro 	modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro'
+import Banner from '../components/Banner.astro';
 
 import banner from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
