modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -1,7 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro'
-import Banner from '../components/Banner.astro';
+import Card from '../components/Card.astro';
 
 import banner from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
@@ -40,7 +39,7 @@ import logosSmall from '../images/deploy-logos-small.png';
       </Card>
       
       <h3>Deploy to anywhere, even the edge</h3>
-      <img class="banner10" src={banner} width="1125" alt="" />
+      <img class="banner10" src={banner} width="1150" alt="" />
       <img class="logos-small" src={logosSmall} alt="" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
