modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -29,6 +29,7 @@ import logosSmall from '../images/deploy-logos-small.png';
       <Card dark={true}>
         <h3>Use the tools you already love</h3>
         <p>
+        src="https://github.com/reitenth/astro-crash-course/blob/main/src/images/banner10.png?raw=true"
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum
           deserunt inventore ut voluptate, officia maiores repellat tenetur
           praesentium omnis est ex tempora a necessitatibus reiciendis at et
