modified:   src/components/Card.astro

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -10,6 +10,8 @@ const { dark = false } = Astro.props as Props;
   <slot />
 </div>
 
+<img class="banner10" src={banner} alt="" />
+
 <style>
   .card {
     background: #3b4252;
