modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -3,7 +3,11 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
 import banner from '../images/banner10.png';
-import logosSmall from '../images/deploy-logos-small.png';
+import banner from '../images/banner3.png';
+import banner from '../images/banner4.png';
+import banner from '../images/banner7.png';
+import banner from '../images/banner8.png';
+import banner from '../images/chinatsu.png';
 ---
 
 <Layout title="About Astro">
@@ -39,8 +43,9 @@ import logosSmall from '../images/deploy-logos-small.png';
         </p>
       </Card>
       
-      <h3>Deploy to anywhere, even the edge</h3>
       <img class="banner10" src={banner} width="1100" alt="" />
+
+      <h3>Deploy to anywhere, even the edge</h3>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde
         doloribus, vel ipsum mollitia aliquid cumque commodi corrupti omnis
