modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -44,6 +44,7 @@ import banner from '../images/chinatsu.png';
       </Card>
       
       <img class="banner10" src={banner} width="1100" alt="" />
+      <img class="banner3" src={banner} width="1100" alt="" />
 
       <h3>Deploy to anywhere, even the edge</h3>
       <p>
