modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -2,12 +2,12 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
-import banner from '../images/banner10.png';
-import banner from '../images/banner3.png';
-import banner from '../images/banner4.png';
-import banner from '../images/banner7.png';
-import banner from '../images/banner8.png';
-import banner from '../images/chinatsu.png';
+import banner10 from '../images/banner10.png';
+import banner3 from '../images/banner3.png';
+import banner4 from '../images/banner4.png';
+import banner7 from '../images/banner7.png';
+import banner8 from '../images/banner8.png';
+import chinatsu from '../images/chinatsu.png';
 ---
 
 <Layout title="About Astro">
@@ -43,8 +43,8 @@ import banner from '../images/chinatsu.png';
         </p>
       </Card>
       
-      <img class="banner10" src={banner} width="1100" alt="" />
-      <img class="banner3" src={banner} width="1100" alt="" />
+      <img class="banner10" src={banner10} width="1100" alt="" />
+      <img class="banner3" src={banner3} width="1100" alt="" />
 
       <h3>Deploy to anywhere, even the edge</h3>
       <p>
