modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 
 import banner3 from '../images/banner3.png';
+import banner4 from '../images/banner4.png';
 import banner10 from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
 ---
@@ -40,8 +41,9 @@ import logosSmall from '../images/deploy-logos-small.png';
         </p>
       </Card>
       
-      <img class="banner3" src={banner3} width="1100" alt="" />
-      <img class="banner10" src={banner10} width="1100" alt="" />
+      <img class="banner3" src={banner3} width="1125" alt="" />
+      <img class="banner4" src={banner4} width="1125" alt="" />
+      <img class="banner10" src={banner10} width="1125" alt="" />
 
       <h3>Deploy to anywhere, even the edge</h3>
       <p>
