--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -1,12 +1,30 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Video from '../components/Video.astro';
 
 import banner3 from '../images/banner3.png';
 import banner4 from '../images/banner4.png';
 import banner10 from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
 ---
+
+<html>
+    <head>
+        <title>Video Gallery</title>
+    </head>
+    <body>
+        <div class="container">
+            <h1>Video Gallery</h1>
+            <div class="row">
+                <div class="feature-img">
+                    <img src="banner3.png" width="100%">
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
+
 
 <Layout title="About Astro">
   <section class="page-content">
