--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,17 +1,21 @@
-import banner3 from '../images/banner3.png';
+<style>
+* {
+    margin: 0;
+    padding: 0;
+  }
+  body{
+    background: #2e8d86
+  }
 
-<html>
-    <head>
-        <title>Video Gallery</title>
-    </head>
-    <body>
-        <div class="container">
-            <h1>Video Gallery</h1>
-            <div class="row">
-                <div class="feature-img">
-                    <img src="banner3.png" width="100%">
-                </div>
-            </div>
-        </div>
-    </body>
-</html>
+  .container{
+    width: 80%;
+    margin: 80%;
+  }
+
+  .container h1{
+    padding: 60px 0;
+    color: #fff;
+    font-size: 44px;
+    text-align: center;
+  }
+</style>
