--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -12,6 +12,7 @@ import logosSmall from '../images/deploy-logos-small.png';
 <html>
     <head>
         <title>Video Gallery</title>
+        <link rel="stylesheet" href="video.css">
     </head>
     <body>
         <div class="container">
