--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -18,8 +18,10 @@ import logosSmall from '../images/deploy-logos-small.png';
         <div class="container">
             <h1>Video Gallery</h1>
             <div class="row">
-                <div class="feature-img">
+                <div class="col">
+                  <div class="feature-img">
                     <img src="banner3.png" width="100%">
+                  </div>
                 </div>
             </div>
         </div>
