--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -24,7 +24,15 @@
     flex-wrap: wrap;
   }
 
-  .col {
+  .col{
     flex-basis: 50%;
     min-width: 250px;
+  }
+
+  .feature-img{
+    width: 83%;
+    margin: auto;
+    position: relative;
+    border-radius: 6px;
+    overflow: hidden;
   }
