modified:   src/components/Video.astro 	modified:   src/styles/video.css

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -18,4 +18,23 @@
     font-size: 44px;
     text-align: center;
   }
+
+  .row{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .col{
+    flex-basis: 50%;
+    min-width: 250px;
+  }
+
+  .feature-img{
+    width: 83%;
+    margin: auto;
+    position: relative;
+    border-radius: 6px;
+    overflow: hidden;
+  }
 </style>
