modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -20,7 +20,7 @@ import logosSmall from '../images/deploy-logos-small.png';
             <div class="row">
                 <div class="col">
                   <div class="feature-img">
-                    <img src="banner3.png" width="100%">
+                    <img class="banner3" src={banner3} width="100%"/>
                   </div>
                 </div>
             </div>
