--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -64,9 +64,9 @@ import logosSmall from '../images/deploy-logos-small.png';
         </p>
       </Card>
       
-      <img class="banner3" src={banner3} width="1125" alt="" />
-      <img class="banner4" src={banner4} width="1125" alt="" />
-      <img class="banner10" src={banner10} width="1125" alt="" />
+      <img class="banner3" src={banner3} width="100%" alt="" />
+      <img class="banner4" src={banner4} width="100%" alt="" />
+      <img class="banner10" src={banner10} width="100%" alt="" />
 
       <h3>Deploy to anywhere, even the edge</h3>
       <p>
