--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -25,6 +25,12 @@ import logosSmall from '../images/deploy-logos-small.png';
                 </div>
             </div>
         </div>
+
+        <div class="video-player">
+          <video width="100%" controls autoplay>
+            <source src="https://www.youtube.com/watch?v=oYpLvFnYuo0" type="video/mp4">
+          </video>
+        </div>
     </body>
 </html>
 
