--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -28,7 +28,7 @@ import logosSmall from '../images/deploy-logos-small.png';
 
         <div class="video-player">
           <video width="100%" controls autoplay>
-            <source src="https://www.youtube.com/watch?v=oYpLvFnYuo0" type="video/mp4">
+            <source src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
           </video>
         </div>
     </body>
