--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,9 +27,9 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <video width="100%" controls autoplay>
+          <iframe width="400">
             <source src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
-          </video>
+          </iframe>
         </div>
     </body>
 </html>
