--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,8 +27,8 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <iframe width="400">
-            <source src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
+          <iframe width="400"
+          src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
           </iframe>
         </div>
     </body>
