--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,7 +27,7 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <iframe width="400"
+          <iframe width="400" height="315"
           src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
           </iframe>
         </div>
