--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -25,9 +25,12 @@ import logosSmall from '../images/deploy-logos-small.png';
                 </div>
             </div>
         </div>
+
+        <div class="video-player">
           <iframe width="400" height="315"
           src="https://www.youtube.com/watch?v=oYpLvFnYuo0">
           </iframe>
+        </div>
     </body>
 </html>
 
