--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,7 +27,8 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <embed width="400" height="315"
+          <embed 
+          width="400" height="315"
           src="https://www.youtube.com/watch?v=oYpLvFnYuo0"
           >
         </div>
