--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,10 +27,12 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <embed 
-          width="400" height="315"
-          src="https://www.youtube.com/watch?v=oYpLvFnYuo0"
+          <object
+          width= "400" 
+          height= "300"
+          data="https://www.youtube.com/watch?v=oYpLvFnYuo0"
           >
+          </object>
         </div>
     </body>
 </html>
