--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -30,6 +30,7 @@ import logosSmall from '../images/deploy-logos-small.png';
           <object
           width= "400" 
           height= "300"
+          type="text/html"
           data="https://www.youtube.com/watch?v=oYpLvFnYuo0"
           >
           </object>
