--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,13 +27,12 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <object
+          <embed 
+          src="https://www.youtube.com/watch?v=oYpLvFnYuo0"
           width= "400" 
           height= "300"
-          type="text/html"
-          data="https://www.youtube.com/watch?v=oYpLvFnYuo0"
+          type="application/x-shockwave-flash"
           >
-          </object>
         </div>
     </body>
 </html>
