--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,11 +27,12 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <embed 
+          <iframe
           src="https://www.youtube.com/watch?v=oYpLvFnYuo0"
           width= "400" 
           height= "300"
           >
+          </iframe>
         </div>
     </body>
 </html>
