modified:   src/pages/project.astro

--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -27,12 +27,15 @@ import logosSmall from '../images/deploy-logos-small.png';
         </div>
 
         <div class="video-player">
-          <iframe
-          src="https://www.youtube.com/watch?v=oYpLvFnYuo0"
-          width= "400" 
-          height= "300"
+          <iframe 
+          width="560" height="315" 
+          src="https://www.youtube.com/embed/oYpLvFnYuo0" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
           >
-          </iframe>
+        </iframe>
         </div>
     </body>
 </html>
