--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -15,17 +15,6 @@ import logosSmall from '../images/deploy-logos-small.png';
     </head>
     <body>
 
-        <div class="container">
-            <h1>Video Gallery</h1>
-            <div class="row">
-                <div class="col">
-                  <div class="feature-img">
-                    <img class="banner3" src={banner3} width="100%"/>
-                  </div>
-                </div>
-            </div>
-        </div>
-
         <div class="video-player">
           <iframe
           width="560" height="315" 
@@ -35,8 +24,21 @@ import logosSmall from '../images/deploy-logos-small.png';
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
           allowfullscreen
           >
+
+          <iframe 
+          width="560" height="315" 
+          src="https://www.youtube.com/embed/2m4DgGioQ9s" 
+          title="YouTube video player" 
+          frameborder="0" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          >
+          </iframe>
         </iframe>
         </div>
+
+
+
     </body>
 </html>
 
