--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -39,7 +39,7 @@
 
   .video-player{
     display: flex;
-    position: absolute;
+    justify-content: center;
     align-items: center;
     width: 100vw;
     height: 100vh;
