--- a/src/styles/video.css
+++ b/src/styles/video.css
@@ -38,7 +38,7 @@
   }
 
   .video-player{
-    display: flex;
+    display: block;
     justify-content: center;
     align-items: center;
     width: 100vw;
