--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -24,15 +24,17 @@ import logosSmall from '../images/deploy-logos-small.png';
           allowfullscreen
           >
         </iframe>
+        </div>
 
-        <iframe 
-        width="512" height="288" 
-        src="https://www.youtube.com/embed/2m4DgGioQ9s" 
-        title="YouTube video player" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        allowfullscreen
-        >
-        </iframe>
+        <div class="video-player">
+          <iframe 
+          width="512" height="288" 
+          src="https://www.youtube.com/embed/2m4DgGioQ9s" 
+          title="YouTube video player" 
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+          allowfullscreen
+          >
+          </iframe>
         </div>
 
 
