--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -15,27 +15,16 @@ import logosSmall from '../images/deploy-logos-small.png';
     </head>
     <body>
 
-        <div class="video-player">
-          <iframe
-          width="512" height="288" 
-          src="https://www.youtube.com/embed/oYpLvFnYuo0" 
-          title="YouTube video player" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen
-          >
-        </iframe>
+      <div class="container">
+        <h1>Video Gallery</h1>
+        <div class="row">
+          <div class="col">
+            <div class="feature-img">
+              <img src="images/josee.png" width="100%">
+            </div>
+          </div>
         </div>
-
-        <div class="video-player">
-          <iframe 
-          width="512" height="288" 
-          src="https://www.youtube.com/embed/2m4DgGioQ9s" 
-          title="YouTube video player" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-          allowfullscreen
-          >
-          </iframe>
-        </div>
+      </div>
 
 
     </body>
