--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -20,7 +20,7 @@ import logosSmall from '../images/deploy-logos-small.png';
         <div class="row">
           <div class="col">
             <div class="feature-img">
-              <img src="images/josee.png" width="100%">
+              <img src="images/josee.jpg" width="100%">
             </div>
           </div>
         </div>
