--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -6,6 +6,7 @@ import banner3 from '../images/banner3.png';
 import banner4 from '../images/banner4.png';
 import banner10 from '../images/banner10.png';
 import logosSmall from '../images/deploy-logos-small.png';
+import josee from '../images/josee.jpg';
 ---
 
 <html>
@@ -20,7 +21,7 @@ import logosSmall from '../images/deploy-logos-small.png';
         <div class="row">
           <div class="col">
             <div class="feature-img">
-              <img src="images/josee.jpg" width="100%">
+              <img class="josee" src={josee} width="100%" alt="" />
             </div>
           </div>
         </div>
