update project.astro and video.css

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,7 +1,10 @@
+<style>
+
 * {
     margin: 0;
     padding: 0;
   }
+  
   body{
     background: #2e8d86;
   }
@@ -43,3 +46,5 @@
     height: 100vw;
     align-items: center;
   }
+
+</style>
