--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -1,11 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Video from '../components/Video.astro';
 
 import banner3 from '../images/banner3.png';
 import banner4 from '../images/banner4.png';
 import banner10 from '../images/banner10.png';
-import logosSmall from '../images/deploy-logos-small.png';
 import josee from '../images/josee.jpg';
 ---
 
@@ -15,7 +15,8 @@ import josee from '../images/josee.jpg';
         <link rel="stylesheet" href="video.css">
     </head>
     <body>
-
+      
+    <Video>
       <div class="container">
         <h1>Video Gallery</h1>
         <div class="row">
@@ -26,7 +27,7 @@ import josee from '../images/josee.jpg';
           </div>
         </div>
       </div>
-
+    </Video>
 
     </body>
 </html>
