--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -11,7 +11,7 @@ import josee from '../images/josee.jpg';
 
 <html>
     <body>
-
+      <Video>
         <div class="container">
           <h1>Video Gallery</h1>
           <div class="row">
@@ -22,7 +22,7 @@ import josee from '../images/josee.jpg';
             </div>
           </div>
         </div>
-
+      </Video>
     </body>
 </html>
 
