--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -9,22 +9,7 @@ import banner10 from '../images/banner10.png';
 import josee from '../images/josee.jpg';
 ---
 
-<html>
-    <body>
-      <Video>
-        <div class="container">
-          <h1>Video Gallery</h1>
-          <div class="row">
-            <div class="col">
-              <div class="feature-img">
-                <img class="josee" src={josee} width="100%" alt="" />
-             </div>
-            </div>
-          </div>
-        </div>
-      </Video>
-    </body>
-</html>
+<Video />
 
 
 
