--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -9,7 +9,7 @@ import banner10 from '../images/banner10.png';
 import josee from '../images/josee.jpg';
 ---
 
-<Video />
+<Video title="page"></Video>
 
 
 
