--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -2,6 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Video from '../components/Video.astro';
+import video from '../styles/video.css';
 
 import banner3 from '../images/banner3.png';
 import banner4 from '../images/banner4.png';
@@ -11,7 +12,20 @@ import josee from '../images/josee.jpg';
 
 <Video title="page"></Video>
 
-
+<html>
+    <body>
+        <div class="container">
+          <h1>Video Gallery</h1>
+          <div class="row">
+            <div class="col">
+              <div class="feature-img">
+                <img class="josee" src={josee} width="100%" alt="" />
+             </div>
+            </div>
+          </div>
+        </div>
+    </body>
+</html>
 
 
 <Layout title="About Astro">
