--- a/src/pages/project.astro
+++ b/src/pages/project.astro
@@ -9,6 +9,8 @@ import banner10 from '../images/banner10.png';
 import josee from '../images/josee.jpg';
 ---
 
+<Video title="abb"></Video>
+
 <Layout title="About Astro">
   <section class="page-content">
     <div class="container">
