update src/pages/index.astro and project.astro

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,11 @@ import Layout from '../layouts/Layout.astro';
 import Showcase from '../components/Showcase.astro';
 import Features from '../components/Features.astro';
 import Tabs from '../components/Tabs.astro';
+import Video from '../components/Video.astro';
+
 ---
+
+<Video title="abb"></Video>
 
 <Layout>
 	<Showcase showExtra={true} />
