update Video.astro, banner10.png, banner8.png and project.astro

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -2,7 +2,7 @@
       <div class="container">
 
         <div class="main-video-container">
-           <video src="/kiznaiver.mp4" controls class="main-video"></video>
+           <video src="https://drive.google.com/file/d/18jGCY0jarOSlvTClhlfTBkP3iCsmwQ3C/preview" type="video/mp4" controls class="main-video"></video>
            <h3 class="main-vid-title">Kiznaiver</h3>
         </div>
      
@@ -86,11 +86,11 @@ body{
    border-radius: 5px;
    box-shadow: 0 5px 15px rgba(0,0,0,.1);
    background-color: #3b4252;
-   padding: 15px;
+   padding: 15px 15px 39px 15px;
 }
 
 .container .main-video-container .main-video{
-   margin-bottom: 0px;
+   margin-bottom: 20px;
    border-radius: 5px;
    width: 100%;
 }
