build(deps): update package-lock.json, package.json, Slideshow.astro and Video.astro

--- a/src/components/Slideshow.astro
+++ b/src/components/Slideshow.astro
@@ -9,15 +9,15 @@
             </div>
 
             <div class="img-container">
-                <img src="src/images/banner7.png"" width="100%" alt="" />
+                <img src="src/images/banner7.png" width="100%" alt="" />
             </div>
 
             <div class="img-container">
-                <img src="src/images/banner8.png"" width="100%" alt="" />
+                <img src="src/images/banner8.png" width="100%" alt="" />
             </div>
 
             <div class="img-container">
-                <img src="src/images/banner10.png"" width="100%" alt="" />
+                <img src="src/images/banner10.png" width="100%" alt="" />
             </div>
     </div>
 </div>
@@ -26,13 +26,10 @@
 
     .slider-frame{
         overflow: hidden;
-        height: "100%";
+        height: 300px;
         width: 1200px;
         margin-top: 20px;
-    }
-   
-    /*---------- SLIDE ANIMATION --------------*/
-   
+    }    
    
     @keyframes slide_animation{
         0% {left: 0px;}
