--- a/src/components/Slideshow.astro
+++ b/src/components/Slideshow.astro
@@ -1,89 +1,123 @@
-<div class="slider-frame">
-    <div class="slide-images">
-            <div class="img-container">
-                <img src="src/images/banner3.png" width="100%" alt="" />
-            </div>
-
-            <div class="img-container">
-                <img src="src/images/banner4.png" width="100%" alt="" />
-            </div>
-
-            <div class="img-container">
-                <img src="src/images/banner7.png" width="100%" alt="" />
-            </div>
-
-            <div class="img-container">
-                <img src="src/images/banner8.png" width="100%" alt="" />
-            </div>
-
-            <div class="img-container">
-                <img src="src/images/banner10.png" width="100%" alt="" />
-            </div>
+   <!--image slider start-->
+   <div class="slider">
+    <div class="slides">
+      <!--radio buttons start-->
+      <input type="radio" name="radio-btn" id="radio1">
+      <input type="radio" name="radio-btn" id="radio2">
+      <input type="radio" name="radio-btn" id="radio3">
+      <input type="radio" name="radio-btn" id="radio4">
+      <input type="radio" name="radio-btn" id="radio5">
+      <!--radio buttons end-->
+      <!--slide images start-->
+      <div class="slide first">
+        <img src="src/images/banner3.png" alt="">
+      </div>
+      <div class="slide">
+        <img src="src/images/banner4.png" alt="">
+      </div>
+      <div class="slide">
+        <img src="src/images/banner7.png" alt="">
+      </div>
+      <div class="slide">
+        <img src="src/images/banner8.png" alt="">
+      </div>
+      <div class="slide">
+        <img src="src/images/banner10.png" alt="">
+      </div>
+      <!--slide images end-->
+      <!--automatic navigation start-->
+      <div class="navigation-auto">
+        <div class="auto-btn1"></div>
+        <div class="auto-btn2"></div>
+        <div class="auto-btn3"></div>
+        <div class="auto-btn4"></div>
+        <div class="auto-btn5"></div>
+      </div>
+      <!--automatic navigation end-->
     </div>
-</div>
+  </div>
+  <!--image slider end-->
+
+  <script type="text/javascript">
+  var counter = 1;
+  setInterval(function(){
+    document.getElementById('radio' + counter).checked = true;
+    counter++;
+    if(counter > 5){
+      counter = 1;
+    }
+  }, 5000);
+  </script>
+
 
 <style>
 
-    .slider-frame{
-        overflow: hidden;
-        height: 300px;
-        width: 1200px;
-        margin-top: 20px;
-    }    
-   
-    @keyframes slide_animation{
-        0% {left: 0px;}
-        10% {left: 0px;}
-        20% {left: 1200px;}
-        30% {left: 1200px;}
-        40% {left: 2400px;}
-        50% {left: 2400px;}
-        60% {left: -1200px;}
-        70% {left: -1200px;}
-        80% {left: -2400px;}
-        90% {left: -2400px;}
-        100% {left:0px;}
-        110% {left:0px;}
-    }
-   
-    @-webkit-keyframes slide_animation{
-        0% {left: 0px;}
-        10% {left: 0px;}
-        20% {left: 1200px;}
-        30% {left: 1200px;}
-        40% {left: 2400px;}
-        50% {left: 2400px;}
-        60% {left: -1200px;}
-        70% {left: -1200px;}
-        80% {left: -2400px;}
-        90% {left: -2400px;}
-        100% {left:0px;}
-        110% {left:0px;}
-    }
-   
-    .slide-images{
-        width: 6000px;
-        height: 800px;
-        margin: 0 0 0 -2400px;
-        position: relative;
-        -webkit-animation-name: slide_animation;
-        animation-name: slide_animation;
-        -webkit-animation-duration: 25s;
-        animation-duration: 25s;
-        -webkit-animation-iteration-count: infinite;
-        animation-iteration-count: infinite;
-        -webkit-animation-direction: alternate;
-        animation-direction: alternate;
-        -webkit-animation-play-state: running;
-        animation-play-state: running;
-    }
-   
-    .img-container{
-        height: 800px;
-        width: 1200px;
-        position: relative;
-        float: left;
-    }
+.slider{
+  width: 100%;
+  overflow: hidden;
+}
 
-       
-</style>           
+.slides{
+  width: 500%;
+  display: flex;
+}
+
+.slides input{
+  display: none;
+}
+
+.slide{
+  width: 20%;
+  transition: 2s;
+}
+
+.slide img{
+  width: 100%;
+}
+
+/*css for manual slide navigation*/
+
+.navigation-manual{
+  position: absolute;
+  width: 70%;
+  margin-top: -40px;
+  display: flex;
+  justify-content: center;
+}
+
+.manual-btn{
+  border: 2px solid #40D3DC;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s;
+}
+
+.manual-btn:not(:last-child){
+  margin-right: 40px;
+}
+
+.manual-btn:hover{
+  background: #40D3DC;
+}
+
+#radio1:checked ~ .first{
+  margin-left: 0;
+}
+
+#radio2:checked ~ .first{
+  margin-left: -20%;
+}
+
+#radio3:checked ~ .first{
+  margin-left: -40%;
+}
+
+#radio4:checked ~ .first{
+  margin-left: -60%;
+}
+#radio5:checked ~ .first{
+  margin-left: -80%;
+}
+
+</style>
