--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,63 +1,62 @@
----
-import { YouTube } from '@astro-community/astro-embed-youtube';
----
-      <div class="container">
+      <div class="container"/>
 
-        <div class="main-video-container">
-         <YouTube id="TVuRRMcgvBg" class="list-video"/>
-           <h3 class="main-vid-title">Kiznaiver</h3>
-        </div>
-     
-        <div class="video-list-container">
-     
-           <div class="list active">
-            <YouTube id="2m4DgGioQ9s" class="list-video"/>
-              <h3 class="list-title">Josee</h3>
-           </div>
-     
-           <div class="list">
-            <YouTube id="oYpLvFnYuo0" class="list-video"/>
-              <h3 class="list-title">Blue Period</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/aftertherain" class="list-video"></video>
-              <h3 class="list-title">After the Rain</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/dancedancedanseur" class="list-video"></video>
-              <h3 class="list-title">Dance Dance Danseur</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/josee.mp4" class="list-video"></video>
-              <h3 class="list-title">man chasing carrot animation</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/josee.mp4" class="list-video"></video>
-              <h3 class="list-title">door hinge animation</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/josee.mp4" class="list-video"></video>
-              <h3 class="list-title">poeple walking in town animation</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/josee.mp4" class="list-video"></video>
-              <h3 class="list-title">knight chasing virus animation</h3>
-           </div>
-     
-           <div class="list">
-              <video src="/josee.mp4" class="list-video"></video>
-              <h3 class="list-title">3D helicopter animation</h3>
-           </div>
-     
-        </div>
-     </div>
+         <div class="container">
 
+            <div class="main-video-container">
+               <video src="kiznaiver.mp4" controls class="main-video"></video>
+               <h3 class="main-vid-title">kiznaiver</h3>
+            </div>
+         
+            <div class="video-list-container">
+         
+               <div class="list active">
+                  <video src="amvmix.mp4" class="list-video"></video>
+                  <h3 class="list-title">AMV Mix</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="blueperiod.mp4" class="list-video"></video>
+                  <h3 class="list-title">Blue Period</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="josee.mp4" class="list-video"></video>
+                  <h3 class="list-title">Josee</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="darlinginthefranxx.mp4" class="list-video"></video>
+                  <h3 class="list-title">Darling in the Franxx</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="plasticmemories.mp4" class="list-video"></video>
+                  <h3 class="list-title">Plastic Memories</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="aftertherain.mp4" class="list-video"></video>
+                  <h3 class="list-title">After the Rain</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="zetsuennotempest.mp4" class="list-video"></video>
+                  <h3 class="list-title">Zetsuen no Tempest</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="darlinginthefranxxedit.mp4" class="list-video"></video>
+                  <h3 class="list-title">Darling in the Franxx</h3>
+               </div>
+         
+               <div class="list">
+                  <video src="dancedancedanseur.mp4" class="list-video"></video>
+                  <h3 class="list-title">Dance Dance Danseur</h3>
+               </div>
+         
+            </div>
+         
+         </div>
 <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
@@ -88,11 +87,11 @@ body{
    border-radius: 5px;
    box-shadow: 0 5px 15px rgba(0,0,0,.1);
    background-color: #3b4252;
-   padding: 15px 15px 39px 15px;
+   padding: 15px 15px 15px 15px;
 }
 
 .container .main-video-container .main-video{
-   margin-bottom: 20px;
+   margin-bottom: 1px;
    border-radius: 5px;
    width: 100%;
 }
