update 1 file and delete 5 files

--- a/src/components/Slideshow.astro
+++ b/src/components/Slideshow.astro
@@ -10,19 +10,19 @@
       <!--radio buttons end-->
       <!--slide images start-->
       <div class="slide first">
-        <img src="src/images/banner3.png" alt="">
+        <img src="banner3.png" alt="">
       </div>
       <div class="slide">
-        <img src="src/images/banner4.png" alt="">
+        <img src="banner4.png" alt="">
       </div>
       <div class="slide">
-        <img src="src/images/banner7.png" alt="">
+        <img src="banner7.png" alt="">
       </div>
       <div class="slide">
-        <img src="src/images/banner8.png" alt="">
+        <img src="banner8.png" alt="">
       </div>
       <div class="slide">
-        <img src="src/images/banner10.png" alt="">
+        <img src="banner10.png" alt="">
       </div>
       <!--slide images end-->
       <!--automatic navigation start-->
