update Slideshow.astro and Video.astro

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -3,54 +3,54 @@
          <div class="container">
 
             <div class="main-video-container">
-               <video src="kiznaiver.mp4" controls class="main-video"></video>
+               <video src="public/kiznaiver.mp4" controls class="main-video"></video>
                <h3 class="main-vid-title">kiznaiver</h3>
             </div>
          
             <div class="video-list-container">
          
                <div class="list active">
-                  <video src="amvmix.mp4" class="list-video"></video>
+                  <video src="public/amvmix.mp4" class="list-video"></video>
                   <h3 class="list-title">AMV Mix</h3>
                </div>
          
                <div class="list">
-                  <video src="blueperiod.mp4" class="list-video"></video>
+                  <video src="public/blueperiod.mp4" class="list-video"></video>
                   <h3 class="list-title">Blue Period</h3>
                </div>
          
                <div class="list">
-                  <video src="josee.mp4" class="list-video"></video>
+                  <video src="public/josee.mp4" class="list-video"></video>
                   <h3 class="list-title">Josee</h3>
                </div>
          
                <div class="list">
-                  <video src="darlinginthefranxx.mp4" class="list-video"></video>
+                  <video src="public/darlinginthefranxx.mp4" class="list-video"></video>
                   <h3 class="list-title">Darling in the Franxx</h3>
                </div>
          
                <div class="list">
-                  <video src="plasticmemories.mp4" class="list-video"></video>
+                  <video src="public/plasticmemories.mp4" class="list-video"></video>
                   <h3 class="list-title">Plastic Memories</h3>
                </div>
          
                <div class="list">
-                  <video src="aftertherain.mp4" class="list-video"></video>
+                  <video src="public/aftertherain.mp4" class="list-video"></video>
                   <h3 class="list-title">After the Rain</h3>
                </div>
          
                <div class="list">
-                  <video src="zetsuennotempest.mp4" class="list-video"></video>
+                  <video src="public/zetsuennotempest.mp4" class="list-video"></video>
                   <h3 class="list-title">Zetsuen no Tempest</h3>
                </div>
          
                <div class="list">
-                  <video src="darlinginthefranxxedit.mp4" class="list-video"></video>
+                  <video src="/public/darlinginthefranxxedit.mp4" class="list-video"></video>
                   <h3 class="list-title">Darling in the Franxx</h3>
                </div>
          
                <div class="list">
-                  <video src="dancedancedanseur.mp4" class="list-video"></video>
+                  <video src="public/dancedancedanseur.mp4" class="list-video"></video>
                   <h3 class="list-title">Dance Dance Danseur</h3>
                </div>
          
