--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -20,8 +20,10 @@
                </div>
          
                <div class="list">
-                  <video src="public/josee.mp4" class="list-video"></video>
+                  <video class="list-video">
+                  <source src="public/josee.mp4" type="video/mp4">
                   <h3 class="list-title">Josee</h3>
+                  </video>
                </div>
          
                <div class="list">
