--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -21,7 +21,7 @@
          
                <div class="list">
                   <video class="list-video">
-                     <source src="public/josee.mp4" type="video/mp4">
+                     <source src="../public/josee.mp4" type="video/mp4">
                      <h3 class="list-title">Josee</h3>
                   </video>
                </div>
