update Slideshow.astro and Video.astro

--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -1,64 +1,60 @@
-      <div class="container"/>
-
          <div class="container">
 
             <div class="main-video-container">
-               <video src="public/kiznaiver.mp4" controls class="main-video"></video>
+               <video src="/kiznaiver.mp4" controls class="main-video"></video>
                <h3 class="main-vid-title">kiznaiver</h3>
             </div>
          
             <div class="video-list-container">
          
                <div class="list active">
-                  <video src="public/amvmix.mp4" class="list-video"></video>
+                  <video src="/amvmix.mp4" class="list-video"></video>
                   <h3 class="list-title">AMV Mix</h3>
                </div>
          
                <div class="list">
-                  <video src="public/blueperiod.mp4" class="list-video"></video>
+                  <video src="/blueperiod.mp4" class="list-video"></video>
                   <h3 class="list-title">Blue Period</h3>
                </div>
          
                <div class="list">
-                  <video class="list-video">
-                     <source src="../public/josee.mp4" type="video/mp4">
+                  <video src="/josee.mp4" class="list-video"></video>
                      <h3 class="list-title">Josee</h3>
                   </video>
                </div>
          
                <div class="list">
-                  <video src="public/darlinginthefranxx.mp4" class="list-video"></video>
+                  <video src="/darlinginthefranxx.mp4" class="list-video"></video>
                   <h3 class="list-title">Darling in the Franxx</h3>
                </div>
          
                <div class="list">
-                  <video src="public/plasticmemories.mp4" class="list-video"></video>
+                  <video src="/plasticmemories.mp4" class="list-video"></video>
                   <h3 class="list-title">Plastic Memories</h3>
                </div>
          
                <div class="list">
-                  <video src="public/aftertherain.mp4" class="list-video"></video>
+                  <video src="/aftertherain.mp4" class="list-video"></video>
                   <h3 class="list-title">After the Rain</h3>
                </div>
          
                <div class="list">
-                  <video src="public/zetsuennotempest.mp4" class="list-video"></video>
+                  <video src="/zetsuennotempest.mp4" class="list-video"></video>
                   <h3 class="list-title">Zetsuen no Tempest</h3>
                </div>
          
                <div class="list">
-                  <video src="/public/darlinginthefranxxedit.mp4" class="list-video"></video>
+                  <video src="/darlinginthefranxxedit.mp4" class="list-video"></video>
                   <h3 class="list-title">Darling in the Franxx</h3>
                </div>
          
                <div class="list">
-                  <video src="public/dancedancedanseur.mp4" class="list-video"></video>
+                  <video src="/dancedancedanseur.mp4" class="list-video"></video>
                   <h3 class="list-title">Dance Dance Danseur</h3>
                </div>
          
             </div>
-         
-         </div>
+            
 <style>
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
