delete 4 files and update 6 files

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,20 +1,21 @@
 <footer class="footer">
   <div class="container">
     <div>
-      <h3>Astro</h3>
+      <h3></h3>
       <p>
-        This is a demo website to show how the Astro framework works. Visit
+        Website built with the Astro Framework. Visit
         the <a href="https://astro.build">official website</a> to learn
         more.
       </p>
     </div>
     <div>
-      <h3>Links</h3>
+      <!-- <h3>Links</h3>
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/blog">Blog</a></li>
       </ul>
+      -->
     </div>
   </div>
 </footer>
