--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -1,15 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Showcase from '../components/Showcase.astro';
 import Video from '../components/Video.astro';
 import Slideshow from '../components/Slideshow.astro';
 ---
 
-<Layout title="About Astro">
+<Layout title="Projects">
+  <Showcase heading="Projects" text="Some of my work made in Adobe and Davinci." />
   <section class="page-content">
     <div class="container">
-      <h2>About Astro</h2>
       <p>
-        text that i need to write about projects
       </p>
 
       <Video/>
