--- a/src/components/Video.astro
+++ b/src/components/Video.astro
@@ -67,12 +67,8 @@
    text-transform: capitalize;
 }
 
-body{
-   padding: 20px;
-}
-
 .container{
-   margin: 50px auto;
+   margin: 0px 0px 50px 0px;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
