--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ export interface Props {
   title?: string;
 }
 
-const { title = 'Astro Crash Course' } = Astro.props as Props;
+const { title = 'reitenth' } = Astro.props as Props;
 ---
 
 <!DOCTYPE html>
