update blog.astro and projects.astro

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,7 +6,7 @@ import Slideshow from '../components/Slideshow.astro';
 ---
 
 <Layout title="Projects">
-  <Showcase heading="Projects" text="Some of my work made in Adobe and Davinci." />
+  <!-- <Showcase heading="Projects" text="Some of my work made in Adobe and Davinci." /> --!>
   <section class="page-content">
     <div class="container">
       <p>
