--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,7 +7,7 @@ const posts = await Astro.glob('../posts/*.md');
 ---
 
 <Layout title="Blog">
-  <Showcase heading="Blog" text="New and exciting stuff I want to write about." />
+  <!-- <Showcase heading="Blog" text="New and exciting stuff I want to write about." /> --!>
   <section class="page-content">
     <div class="container">
       {posts.map(post => (
