--- a/src/components/Slideshow.astro
+++ b/src/components/Slideshow.astro
@@ -73,6 +73,11 @@
 
 .slide img{
   width: 100%;
+  background: #3b4252;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #333;
+  margin-bottom: 20px;
 }
 
 /*css for manual slide navigation*/
