--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,23 +10,17 @@ import Tabs from '../components/Tabs.astro';
 	
 	<section class="page-content">
 		<div class="container">
-			<h2>Get Started With Astro</h2>
+			<h2>PC components</h2>
 			<p>
-				Get a new Astro project up and running locally with our helpful
-				create-astro CLI wizard!
 			</p>
 		
-			<Tabs headings={['NPM', 'PNPM', 'YARN']} contents={['$ npm create astro@latest', '$ pnpm create astro@latest', '$ yarn create astro']} />
+			<Tabs headings={['CPU', 'GPU', 'Motherboard', 'Memory', 'NVME', 'HDD', 'CPU Cooler', 'Monitor', 'Headphones', 'Keyboard', 'Mouse', 'Case']} contents={['AMD Ryzen 7 7800X3D 4.2 GHz 8-Core Processor ', 'AMD Midnight Black Radeon RX 6800 XT 16 GB Video Card ', ' MSI MAG B650 TOMAHAWK WIFI ATX AM5 Motherboard ', 'Corsair Vengeance 32 GB (2 x 16 GB) DDR5-5600 CL36 Memory ', 'Kingston NV2 2 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive ', 'Western Digital Blue 8 TB 3.5" 5640 RPM Internal Hard Drive ', 'NZXT Kraken X63 98.17 CFM Liquid CPU Cooler ', 'Gigabyte M27Q 27.0" 2560 x 1440 170 Hz Monitor + (2) 24" 1920 x 1080 144 Hz Monitors', 'Sennheiser HD600 Headphones + Schitt Stack AMP/DAC', 'EPOMAKER TH80 Wireless Keyboard', 'Xlite Wireless v2 Mini Gaming Mouse - White', 'Carbide Series 275R Mid-Tower Gaming Case — White']} />
 
-			<h3>Start Building</h3>
+			<h3></h3>
 			<p>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta ipsum
-				deserunt inventore ut voluptate, officia maiores repellat tenetur
-				praesentium omnis est ex tempora a necessitatibus reiciendis at et
-				dignissimos. Ipsam eius consequuntur cupiditate aperiam porro, esse
-				laborum impedit nesciunt ut voluptatum assumenda aspernatur libero
-				iusto error molestias dolorum, necessitatibus labore?
+
 			</p>
 		</div>
 	</section>
+
 </Layout>
