--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -56,8 +56,9 @@ const { heading = "Justin Christensen", text="About Me/Projects/Blog", showExtra
   margin-bottom: 20px;
 }
 
-.showcase-img {
+.profilepic {
   text-align: center;
+  border-radius: 10px;
 }
 
 .showcase-img img {
