--- a/src/components/Showcase.astro
+++ b/src/components/Showcase.astro
@@ -61,7 +61,7 @@ const { heading = "Justin Christensen", text="About Me/Projects/Blog", showExtra
   border-radius: 10px;
 }
 
-.showcase-img img {
+.profilepic img {
   border-radius: 10px;
   margin: auto;
 }
