--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -26,11 +26,13 @@ const featuresData = [
     grid-template-columns: repeat(4, 1fr);
     grid-gap: 20px;
     margin: 30px auto;
+    padding: 20px;
   }
 
   @media (max-width: 500px) {
   .features .container {
     grid-template-columns: 1fr;
+    padding: 20px;
   }
 }
 
