--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,24 +3,10 @@ import Layout from '../layouts/Layout.astro';
 import Showcase from '../components/Showcase.astro';
 import Features from '../components/Features.astro';
 import Tabs from '../components/Tabs.astro';
+import PcParts from '../components/PcParts.astro';
 ---
 <Layout>
 	<Showcase showExtra={true} />
 	<Features />
-	
-	<section class="page-content">
-		<div class="container">
-			<h2>PC components</h2>
-			<p>
-			</p>
-		
-			<Tabs headings={['CPU', 'GPU', 'Motherboard', 'Memory', 'NVME', 'HDD', 'CPU Cooler', 'Monitor', 'Headphones', 'Keyboard', 'Mouse', 'Case']} contents={['AMD Ryzen 7 7800X3D 4.2 GHz 8-Core Processor ', 'AMD Midnight Black Radeon RX 6800 XT 16 GB Video Card ', ' MSI MAG B650 TOMAHAWK WIFI ATX AM5 Motherboard ', 'Corsair Vengeance 32 GB (2 x 16 GB) DDR5-5600 CL36 Memory ', 'Kingston NV2 2 TB M.2-2280 PCIe 4.0 X4 NVME Solid State Drive ', 'Western Digital Blue 8 TB 3.5" 5640 RPM Internal Hard Drive ', 'NZXT Kraken X63 98.17 CFM Liquid CPU Cooler ', 'Gigabyte M27Q 27.0" 2560 x 1440 170 Hz Monitor + (2) 24" 1920 x 1080 144 Hz Monitors', 'Sennheiser HD600 Headphones + Schitt Stack AMP/DAC', 'EPOMAKER TH80 Wireless Keyboard', 'Xlite Wireless v2 Mini Gaming Mouse - White', 'Carbide Series 275R Mid-Tower Gaming Case — White']} />
-
-			<h3></h3>
-			<p>
-
-			</p>
-		</div>
-	</section>
-
+	<PcParts />
 </Layout>
