--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -45,7 +45,7 @@ h3 {
 .container {
   max-width: 1200px;
   margin: 0 auto;
-}
+  }
 
 .btn {
   display: inline-block;
@@ -95,5 +95,9 @@ h3 {
   h1,
   h2 {
     text-align: center;
+  }
+  .container {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
